# julia-rust-cuda

./: .gitignore  Cargo.toml  README.md
src/: exp.rs  main.rs
troubleshooting/: explode.sh
